--- a/css/main.css
+++ b/css/main.css
@@ -122,31 +122,47 @@ display: none;
 
 }
 
-.second{
-/*  outline: 1px solid black;*/
+#second{
+ outline: 1px solid black;
   width: 30%;
   height: 100px;
   margin-left: 20px;
   margin-top: 10px;
   border-radius: 10px;
   background-color: white;
+display: none;
 
+}
+
+#second1{
+  width: 30%;
+  height: 100px;
+  margin-left: 20px;
+  margin-top: 10px;
+  border-radius: 10px;
+  background-color: white;
+  display: inline-block;
 }
 .title2{
 
 }
 
-.cuadro{
- border:1px solid black;
-  height: 100px;
+#btn-list{
+  display: none;
 }
-.cuadro button{
-  border: none;
-  background-color: gray;
-  width: 100%;
-  text-align: left;
-}
-#btn{
-  color:red;
 
+#btn-list1{
+  display: block;
+background-color: red;
+}
+.newText{
+  outline: 1px solid red;
+}
+
+#formulario{
+  display: none;
+}
+#formulario1{
+  display: block;
+  
 }
