--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ a{
 }
 
 /*icono buscar*/
-#search{
+.search{
   font-size: 15px;
   margin-top: 8px;
   margin-left: 100px;
@@ -89,21 +89,22 @@ img{
   margin-bottom: -15px;
 }
 
+/*cuerpo*/
 main{
-/*  background-color: #fe8a1e;*/
-/*background: linear-gradient(#fe8100, #ffb154);*/
   background-image:url(../assets/images/fondo4.jpg);
-background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
   height: 700px;
-  outline: 1px solid red;
 }
-
-.title{
+/*aplicando estilo al subtitulo*/
+.subtitle{
   /*outline: 1px solid red;*/
   color: white;
   font-size: 10px;
   margin-left: 50px;
+  height: 50px;
+  padding-top: 10px;
+  font-size: 16px;
 }
 
 #container-grande{
